AKS-Istio-Service-Mesh-Demo/kubernetes-manifests/ingress/gateway.yaml
# Istio Gateway (networking.istio.io) bound to the AKS-managed external
# ingress gateway deployment/service `aks-istio-ingressgateway-external` in
# the aks-istio-ingress namespace. This is NOT the Kubernetes Gateway API used
# by the separate "AKS App Routing (Istio)" add-on - see the root README for
# the distinction between the two.
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: bookinfo-gateway
  namespace: default
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
